--- a/views/register/freelancer/freelancer.ejs
+++ b/views/register/freelancer/freelancer.ejs
@@ -41,7 +41,7 @@
                         <div id="form-error" class="error-message">Por favor, preencha todos os campos.</div>
 
                         <div class="container-button">
-                            <a href="index"><button class="cancelar">Cancelar</button></a>
+                            <button class="cancelar" onclick="window.location.href='/login'">Cancelar</button>
                             <input type="submit" name="btnenviar" id="btnenviar" class="botao" value="Cadastrar" />
                         </div>
                     </div>
@@ -89,7 +89,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: #4caf50;
+            background-color: #404040;
             color: white;
             padding: 20px 30px;
             border-radius: 8px;
